# networking-ovs-dpdk

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  app-rah.py  app-rah2.py  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
devstack/gate/: devstackgaterc  post_test_hook.sh  pre_test_hook.sh
devstack/libs/: agent  ovs-dpdk
devstack/ovs-dpdk/: ovs-dpdk-conf  ovs-dpdk-init
doc/source/: conf.py  contributing.rst  getstarted.rst  index.rst  installation.rst  known_issues  readme.rst  usage.rst  usage_odl.rst  usage_puppet.rst  version_constraints  version_constraints.rst
doc/source/_downloads/: local.conf.compute_node  local.conf.controller_node  local.conf.single_node  local.conf_example
doc/source/getstarted/: centos.rst  fedora.rst  ubuntu.rst
networking_ovs_dpdk/: __init__.py
networking_ovs_dpdk/agent/: main.py  ovs_dpdk_firewall.py  ovs_dpdk_neutron_agent.py
networking_ovs_dpdk/common/: _i18n.py  config.py  constants.py
networking_ovs_dpdk/driver/: mech_ovs_dpdk.py
networking_ovs_dpdk/eventlet/: ovs_dpdk_neutron_agent.py
puppet/: README.md
puppet/ovsdpdk/examples/: allinone.pp  compute.pp  controller.pp  install_small.pp  openrc
releasenotes/notes/: adding-mlnx-support-921f44fd0d532bf1.yaml  bug-1655677-3cf1751dc78b2e04.yaml  enable-ovs-2.7-b99a1578cf389b9f.yaml  make-usage-docs-linkable-eb666a5cef348da3.yaml  remove-puppet-support-4f2eb3850b5e66e3.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
(+40 files in other folders)
