[metadata]
name = networking-ovs-dpdk
summary = A collection of installation tools to deploy DPDK accelerated Open vSwitch with OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[build_release]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
